corrected alignment of play button

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -51,5 +51,5 @@
 
 .match-status {
   position: absolute;
-  top: 280px;
+  top: 250px;
 }
